--- a/Part5/bloglist-frontend/package.json
+++ b/Part5/bloglist-frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "start": "node index.js",
     "build": "vite build",
+    "test": "vitest run",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -17,13 +18,20 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "eslint-plugin-vitest-globals": "^1.5.0",
+    "jest": "^30.0.3",
+    "jsdom": "^26.1.0",
+    "vite": "^4.4.5",
+    "vitest": "^3.2.4"
   }
 }
