--- a/Part5/bloglist-frontend/package.json
+++ b/Part5/bloglist-frontend/package.json
@@ -24,6 +24,8 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.6.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "cypress": "^14.5.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
