--- a/Part7/bloglist/bloglist-frontend/package.json
+++ b/Part7/bloglist/bloglist-frontend/package.json
@@ -21,6 +21,7 @@
         "react-bootstrap": "^2.10.10",
         "react-dom": "^18.2.0",
         "react-redux": "^9.2.0",
+        "react-router-bootstrap": "^0.26.3",
         "react-router-dom": "^7.7.1"
     },
     "devDependencies": {
