--- a/Part8/library-backend/package.json
+++ b/Part8/library-backend/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.9",
     "@apollo/server": "^5.0.0",
     "graphql": "^16.11.0"
   }
