--- a/Part8/library-backend/package.json
+++ b/Part8/library-backend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@apollo/client": "^3.13.9",
     "@apollo/server": "^5.0.0",
-    "graphql": "^16.11.0"
+    "dotenv": "^17.2.1",
+    "graphql": "^16.11.0",
+    "mongoose": "^7.8.7",
+    "mongoose-unique-validator": "^4.0.1"
   }
 }
