--- a/Part8/library-frontend/package.json
+++ b/Part8/library-frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
+    "dotenv": "^17.2.1",
     "graphql": "^16.11.0",
+    "mongoose": "^8.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
