--- a/Part8/library-backend/package.json
+++ b/Part8/library-backend/package.json
@@ -4,18 +4,24 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "library-backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
-    "@apollo/server": "^5.0.0",
+    "@apollo/server": "^4.11.0",
+    "@graphql-tools/schema": "^10.0.25",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "express": "^4.21.2",
     "graphql": "^16.11.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
-    "mongoose-unique-validator": "^4.0.1"
+    "mongoose-unique-validator": "^4.0.1",
+    "ws": "^8.18.3"
   }
 }
