--- a/Part8/library-backend/package.json
+++ b/Part8/library-backend/package.json
@@ -14,6 +14,7 @@
     "@apollo/server": "^4.11.0",
     "@graphql-tools/schema": "^10.0.25",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.3",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "graphql": "^16.11.0",
